# fastapi-test

./: .gitignore  app.py  crud.py  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 2025_02_05_1427-890486d60465_added_products_table.py  2025_02_05_1436-034c602591ff_added_users_table.py  2025_02_05_1444-c9bb26febf12_added_posts_table.py  2025_02_05_1519-bfb0e4e0108c_added_profiles_table.py  2025_02_08_1428-e52875210a05_create_orders_table.py  2025_02_08_1514-8c5cb8b22544_create_order_product_association_table.py  2025_02_08_1723-4d912276051a_add_count_to_order_product_association_.py  2025_02_08_1742-608d6be1ba3a_add_unit_price_to_order_product_.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py  utils.py
core/models/: __init__.py  base.py  db_helper.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
tests/: test_utils.py
users/: schemas.py  views.py
